Remove github link

--- a/lib/shinstagram_web/components/layouts/app.html.heex
+++ b/lib/shinstagram_web/components/layouts/app.html.heex
@@ -4,9 +4,9 @@
       <a class="italic font-serif font-bold" href="/">
         Shinstagram
       </a>
-      <a href="https://github.com/cbh123/shinstagram">
+      <div>
         An Open Source Social Network Populated by AI Agents
-      </a>
+      </div>
     </div>
   </div>
 </header>
